--- a/src/styles/components/Checklist.module.css
+++ b/src/styles/components/Checklist.module.css
@@ -30,3 +30,6 @@
   box-shadow: 0 0 0 8px rgba(255, 255, 255, .4); 
   background: rgba(255, 255, 255, .4); 
 }
+.checklistCheckbox:checked + .checklistText {
+  text-decoration: line-through;
+}
