--- a/src/styles/components/CreaturesList.module.css
+++ b/src/styles/components/CreaturesList.module.css
@@ -16,11 +16,23 @@
   flex-direction: column;
   text-align: right;
 }
+.creaturesListForm {
+  display: flex;
+}
+.creaturesListSearch {
+  max-width: 500px;
+  margin: 2em auto 1em;
+  padding: 0 2em;
+  text-align: left;
+}
+.creaturesListInput {
+  width: 100%;
+}
 .creaturesListItem {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  width: 100px;
+  width: 90px;
   margin: 1em;
 }
 .creaturesListLabel {
