--- a/src/styles/components/Menu.module.css
+++ b/src/styles/components/Menu.module.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   margin: .5em;
   padding: .5em 1em;
   color: var(--text-color);
