--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -112,6 +112,54 @@ a.button {
   /* background: #6B9F62; */
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23FFF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E") center no-repeat, #6B9F62;
 }
+/* Input file */
+.fileArea {
+  width: 100%;
+  position: relative;
+  margin: 1em 0;
+}
+.fileArea input[type=file] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+.fileArea .fileDummy {
+  width: 100%;
+  padding: 30px;
+  background: #FACB61 url('/assets/pattern-grid-2x.png');
+  background-size: 200px;
+  background-position: center;
+  border-radius: 30px;
+  text-align: center bottom;
+  transition: background .2s ease-in-out;
+  box-sizing: border-box;
+}
+.fileArea .fileDummy .fileSuccess {
+  display: none;
+}
+.fileArea:hover .fileDummy {
+  background-size: 400px;
+}
+.fileArea input[type=file]:focus + .fileDummy {
+  outline: 2px solid rgba(255,255,255,0.5);
+  outline: -webkit-focus-ring-color auto 5px;
+}
+.fileArea input[type=file]:valid + .fileDummy {
+  background-color: rgba(107, 159, 98, 0.5);
+}
+.fileArea input[type=file]:valid + .fileDummy .fileSuccess {
+  display: inline-block;
+}
+.fileArea input[type=file]:valid + .fileDummy .fileDefault {
+  display: none;
+}
+/* End input file */
 
 .textCenter {
   text-align: center;
