--- a/src/styles/components/Menu.module.css
+++ b/src/styles/components/Menu.module.css
@@ -27,6 +27,9 @@
   text-decoration: none;
   transition: background-color .2s ease-in-out;
 }
+.menuActive {
+  background: rgba(255, 255, 255, .5);
+}
 .menuItem:hover {
   background: rgba(255, 255, 255, .2);
 }
