--- a/src/styles/components/Menu.module.css
+++ b/src/styles/components/Menu.module.css
@@ -27,8 +27,16 @@
   text-decoration: none;
   transition: background-color .2s ease-in-out;
 }
+.menuItem .menuIcon,
+.menuItem .menuLabel {
+  opacity: .5;
+}
 .menuActive {
   background: rgba(255, 255, 255, .5);
+}
+.menuActive .menuIcon,
+.menuActive .menuLabel {
+  opacity: 1
 }
 .menuItem:hover {
   background: rgba(255, 255, 255, .2);
