Add menu to _app.js, to avoid useless rerenders

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -60,6 +60,7 @@ h1 {
   align-items: center;
   min-height: 100vh;
   border-radius: 10px;
+  padding-bottom: 2em;
 }
 a.button {
   display: inline-flex;
