--- a/src/styles/components/CreaturesList.module.css
+++ b/src/styles/components/CreaturesList.module.css
@@ -3,32 +3,6 @@
   margin-bottom: auto;
   width: 100%;
 }
-.creaturesListHeader {
-  display: flex;
-  justify-content: space-between;
-  max-width: 500px;
-  margin: auto;
-  padding: 0 2em;
-}
-.creaturesListHeaderInfo {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  text-align: right;
-}
-.creaturesListForm {
-  display: flex;
-}
-.creaturesListSearch {
-  max-width: 500px;
-  margin: 2em auto 1em;
-  padding: 0 2em;
-  text-align: left;
-}
-.creaturesListInput {
-  width: 100%;
-  margin-right: 1em;
-}
 .creaturesListItem {
   display: inline-flex;
   flex-direction: column;
@@ -60,13 +34,13 @@
   top: 0;
   right: 0;
   margin: 0;
-  border-radius: 50%;
-  transform: scale(60%);
+  transform: scale(.7);
   box-shadow: 0 0 0 5px #6b9f62;
   transition: all .2s ease-in-out;
 }
 .creaturesListCheckbox:checked {
   opacity: 1;
+  border-radius: 50%;
 }
 .creaturesListImage {
   display: inline-flex;
