Change second copy button color, change default language, add break line between buttons

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -79,6 +79,11 @@ a.button {
   color: #FFF;
   cursor: pointer;
 }
+.buttonSecondary {
+  background: #D8CCAB;
+  border-color: #D8CCAB;
+  color: var(--text-color);
+}
 .buttonDanger {
   background: tomato;
   border-color: tomato;
