--- a/src/styles/components/MuseumList.module.css
+++ b/src/styles/components/MuseumList.module.css
@@ -1,16 +1,16 @@
-.creaturesList {
+.museumList {
   text-align: center;
   margin-bottom: auto;
   width: 100%;
 }
-.creaturesListItem {
+.museumListItem {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
   width: 90px;
   margin: 1em;
 }
-.creaturesListLabel {
+.museumListLabel {
   position: relative;
   background: rgba(255, 255, 255, .1);
   border-radius: 50%;
@@ -18,17 +18,17 @@
   transition: all .2s ease-in-out;
   cursor: pointer;
 }
-.creaturesListLabel:hover {
+.museumListLabel:hover {
   background: rgba(255, 255, 255, .4);
 }
-.creaturesListLabelActive {
+.museumListLabelActive {
   background: rgba(250, 203, 97, .6);
   box-shadow: inset 0 0 0 5px #FACB61;
 }
-.creaturesListLabelActive:hover {
+.museumListLabelActive:hover {
   background: rgba(250, 203, 97, .8);
 }
-.creaturesListCheckbox {
+.museumListCheckbox {
   opacity: 0;
   position: absolute;
   top: 0;
@@ -38,11 +38,11 @@
   box-shadow: 0 0 0 5px #6b9f62;
   transition: all .2s ease-in-out;
 }
-.creaturesListCheckbox:checked {
+.museumListCheckbox:checked {
   opacity: 1;
   border-radius: 50%;
 }
-.creaturesListImage {
+.museumListImage {
   display: inline-flex;
   align-items: center;
   justify-content: center;
