--- a/src/styles/components/SettingsOptions.module.css
+++ b/src/styles/components/SettingsOptions.module.css
@@ -38,3 +38,9 @@
   margin: auto;
   width: 100px;
 }
+.settingsOptionsMenuItems {
+  text-align: left;
+  max-width: 300px;
+  margin-right: auto;
+  margin-left: auto;
+}
