Add articles on the museum (#39)
* Add articles on the museum
- Add translation to display settings;
- Change emoji from copy of fossils;

* update version os language

Co-authored-by: Diogo Ferreira Fernandes <dio@mac.local>

--- a/src/styles/components/MuseumList.module.css
+++ b/src/styles/components/MuseumList.module.css
@@ -50,3 +50,13 @@
   height: 64px;
   vertical-align: middle;
 }
+.museumListArticle {
+  padding-right: 1em;
+  padding-left: 1em;
+}
+.museumListArticleIcon {
+  vertical-align: middle;
+}
+.museumListArticleImage {
+  max-width: 100%;
+}
