--- a/src/styles/components/MuseumList.module.css
+++ b/src/styles/components/MuseumList.module.css
@@ -12,21 +12,21 @@
 }
 .museumListLabel {
   position: relative;
-  background: rgba(255, 255, 255, .1);
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   padding: 1em;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   cursor: pointer;
 }
 .museumListLabel:hover {
-  background: rgba(255, 255, 255, .4);
+  background: rgba(255, 255, 255, 0.4);
 }
 .museumListLabelActive {
-  background: rgba(250, 203, 97, .6);
-  box-shadow: inset 0 0 0 5px #FACB61;
+  background: rgba(250, 203, 97, 0.6);
+  box-shadow: inset 0 0 0 5px #facb61;
 }
 .museumListLabelActive:hover {
-  background: rgba(250, 203, 97, .8);
+  background: rgba(250, 203, 97, 0.8);
 }
 .museumListCheckbox {
   opacity: 0;
@@ -34,9 +34,9 @@
   top: 0;
   right: 0;
   margin: 0;
-  transform: scale(.7);
+  transform: scale(0.7);
   box-shadow: 0 0 0 5px #6b9f62;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .museumListCheckbox:checked {
   opacity: 1;
