--- a/src/styles/components/Updates.module.css
+++ b/src/styles/components/Updates.module.css
@@ -1,27 +1,26 @@
 .updatesContainer {
-  width: calc(100% - 3em);
+  width: 100%;
   max-width: 600px;
   margin-bottom: auto;
   text-align: center;
 }
-
 .updateItem {
+  position: relative;
   text-align: left;
   background-color: hsla(141, 38%, 66%, 0.4);
-  padding: 10px;
+  padding: 1px 1em;
   border-radius: 10px;
-  margin-top: 20px;
+  margin: 1em;
 }
 .updateItem h5 {
   font-size: 22px;
   margin: 15px auto;
 }
-
 .updateItem small {
-  margin-top: -15px;
-  margin-right: -15px;
+  position: absolute;
+  right: -2px;
   float: right;
-  background-color: hsl(9, 100%, 64%);
+  background-color: tomato;
   color: #fff;
   padding: 5px;
   border-radius: 10px;
