Update code based on google audits (#43)
- Let user zoom on page (Usability)
- Add max zoom to 5
- Remove splash (Performance and is wasn't working
- Change color for contrast

Co-authored-by: Diogo Ferreira Fernandes <dio@mac.local>

--- a/src/styles/components/Updates.module.css
+++ b/src/styles/components/Updates.module.css
@@ -20,7 +20,7 @@
   position: absolute;
   right: -2px;
   float: right;
-  background-color: tomato;
+  background-color: #E62D2B;
   color: #fff;
   padding: 5px;
   border-radius: 10px;
