--- a/src/styles/components/Checklist.module.css
+++ b/src/styles/components/Checklist.module.css
@@ -2,8 +2,8 @@
   width: 800px;
   max-width: calc(100% - 4em);
   padding: 1em 2em;
-  margin: 0 2em;
-  background: #F4F1E4;
+  margin: 0 auto;
+  background: #f4f1e4;
   border-radius: 50px;
   box-sizing: border-box;
 }
@@ -14,21 +14,21 @@
 }
 .checklistItem {
   margin: 0;
-  padding: .6em 0;
+  padding: 0.6em 0;
 }
 .checklistItem + .checklistItem {
-  border-top: 2px dashed #ECA9B1;
+  border-top: 2px dashed #eca9b1;
 }
 .checklistLabel {
   display: flex;
   align-items: center;
   border-radius: 10px;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   cursor: pointer;
 }
 .checklistLabel:hover {
-  box-shadow: 0 0 0 8px rgba(255, 255, 255, .4); 
-  background: rgba(255, 255, 255, .4); 
+  box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.4);
 }
 .checklistCheckbox:checked + .checklistText {
   text-decoration: line-through;
