--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -61,9 +61,10 @@ h1 {
   background-repeat: no-repeat;
 }
 .layout {
-  display: flex;
+  display: flow-root;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   min-height: calc(100vh - 75px); /* height - menu */
   border-radius: 10px;
   padding-bottom: 2em;
