Fix songs aligment after css changes to layout

--- a/src/components/songs/Songs.module.css
+++ b/src/components/songs/Songs.module.css
@@ -1,6 +1,7 @@
 .songs {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  justify-items: center;
   max-width: calc(100% - 2em);
   margin: 1em;
   gap: 0.75em;
