Updade background for songs (#51)
Co-authored-by: Diogo Ferreira Fernandes <dio@mac.local>

--- a/src/styles/pages/songs.module.css
+++ b/src/styles/pages/songs.module.css
@@ -1,5 +1,5 @@
 .layout {
-  overflow: hidden;
+  background: #5bd1f5;
 }
 .layout:before {
   content: "";
@@ -8,8 +8,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
-  background: #5bd1f5 url("/assets/waves.svg");
+  background: url("/assets/waves.svg");
   background-size: 100% 33%;
   background-repeat: no-repeat;
   background-position: bottom;
